# ops-platform

./: .gitignore  README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  chat.py  plugins.py
backend/core/: __init__.py  agent.py  plugins.py
frontend/: index.html  package.json
frontend/src/: App.vue  main.js  style.css
frontend/src/views/: Chat.vue  Plugins.vue
plugins/nginx/: SKILL.md  config.yaml
plugins/nginx/tools/: __init__.py  nginx_tool.py
